[CLOUDTRUST-4724] Migrate to Keycloak 20