@@ -5,17 +5,17 @@
     <parent>
         <groupId>io.cloudtrust</groupId>
         <artifactId>kc-cloudtrust-testsuite</artifactId>
-        <version>18.0.0</version>
-        <relativePath />
+        <version>20.0.0</version>
+        <relativePath/>
     </parent>
 
     <artifactId>keycloak-event-emitter-tests</artifactId>
-    <version>18.1.2-SNAPSHOT</version>
+    <version>20.0.0-SNAPSHOT</version>
 
     <properties>
         <apache-cxf.version>3.4.1</apache-cxf.version>
         <gson.version>2.9.0</gson.version>
-        <mockito.version>4.5.0</mockito.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -27,13 +27,11 @@
         <dependency>
             <groupId>io.cloudtrust</groupId>
             <artifactId>kc-cloudtrust-test-tools</artifactId>
-            <version>${kc-cloudtrust.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi</artifactId>
-            <version>${keycloak.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -104,6 +102,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-install-plugin</artifactId>
